<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="50dp" >

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/fornt_flip_logo" />

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edit_text_white"
            android:orientation="vertical"
            android:padding="20dp" >

            <com.eduglasses.frontflip.utils.CalibriTextView
                android:id="@+id/textViewPresentationId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/presentationId"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editTextPresentationId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/frontFlipBackgroung"
                android:ems="10"
                android:inputType="number"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" >
            </EditText>

            <com.eduglasses.frontflip.utils.CalibriTextView
                android:id="@+id/textViewStudentId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/studentName"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editTextStudentId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/frontFlipBackgroung"
                android:ems="10"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" >
            </EditText>

            <com.eduglasses.frontflip.utils.CalibriButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/btn_style"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/progressBaLogin"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPlayStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="Please install the supporting app for the best user experience..... "
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButtonPlayStore"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/playstore_icon" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>